# ava-polars

./: .gitignore  README.md  benchmarking.ipynb  demo_script.sh  extract_data.py  extract_weather.py  find_nearest_station.sql  makeDatabase.sql  multi_extract_data.py  pyproject.toml  transformFinalData.py  transformWeather.py  transform_ava_coords.py
modelling/: clfSwitcher.py  data_prep.py  demo_pipe.py  gridsearch.ipynb  model_find.py  pipe_route.py  scoring.py
