[project]
name = "ava-polars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "ipython>=8.29.0",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "pyproj>=3.7.0",
    "requests>=2.32.3",
    "ruff>=0.7.1",
]
